src/main/java/org/mdolidon/hamster/configuration/antlrGenerated/HamsterConfigParser.java
// Generated from HamsterConfigParser.g4 by ANTLR 4.7.1
package org.mdolidon.hamster.configuration.antlrGenerated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HamsterConfigParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ALL=1, AS=2, AS_BASE_NAME=3, AS_TREE=4, AVOID=5, CHECK_IN_AT=6, COOKIES=7, 
		CSS=8, DOMAIN=9, EACH=10, FILE=11, FLAT=12, FROM=13, GET=14, GET_UNKNOWN=15, 
		IMAGES=16, ITEMS_ON_DOMAIN=17, JUMPS=18, JUMPS_AND_MORE=19, KB=20, MAXIMUM=21, 
		MB=22, NO_SIZE_LIMIT=23, ON=24, OUTSIDE=25, PARALLEL_DOWNLOADS=26, PASSWORD=27, 
		POST=28, RESOURCES=29, SAVE=30, START_AT=31, SUBPATHS=32, UNDER=33, UNKNOWN=34, 
		UP_TO=35, URLS=36, USER=37, EQUALS=38, INTEGER_LITERAL=39, STRING_LITERAL=40, 
		COMMENT=41, WS=42, WORD=43;
	public static final int
		RULE_integer = 0, RULE_string = 1, RULE_naked_string = 2, RULE_file_content_string = 3, 
		RULE_string_properties_map = 4, RULE_string_property = 5, RULE_config = 6, 
		RULE_directive = 7, RULE_start_directive = 8, RULE_parallel_directive = 9, 
		RULE_max_size_directive = 10, RULE_no_max_size_directive = 11, RULE_max_size_per_file_directive = 12, 
		RULE_size_unit = 13, RULE_kilobytes = 14, RULE_megabytes = 15, RULE_save_directive = 16, 
		RULE_save_as_tree = 17, RULE_save_flat = 18, RULE_save_as_basename = 19, 
		RULE_save_regex_to_template = 20, RULE_save_under_clause = 21, RULE_download_directive = 22, 
		RULE_get_rule = 23, RULE_get_unknown_rule = 24, RULE_avoid_rule = 25, 
		RULE_authentication_directive = 26, RULE_simple_authentication_rule = 27, 
		RULE_checkin_directive = 28, RULE_cookies_directive = 29, RULE_matcher = 30, 
		RULE_unknown_matcher_op = 31, RULE_matchers_product = 32, RULE_rest = 33, 
		RULE_and_matcher = 34, RULE_and_not_matcher = 35, RULE_matcher_factor = 36, 
		RULE_not_matcher_op = 37, RULE_all_matcher = 38, RULE_images_matcher = 39, 
		RULE_same_domain_matcher = 40, RULE_subpaths_matcher = 41, RULE_resources_matcher = 42, 
		RULE_css_matcher = 43, RULE_urls_matcher = 44, RULE_max_jumps_matcher = 45, 
		RULE_min_jumps_matcher = 46;
	public static final String[] ruleNames = {
		"integer", "string", "naked_string", "file_content_string", "string_properties_map", 
		"string_property", "config", "directive", "start_directive", "parallel_directive", 
		"max_size_directive", "no_max_size_directive", "max_size_per_file_directive", 
		"size_unit", "kilobytes", "megabytes", "save_directive", "save_as_tree", 
		"save_flat", "save_as_basename", "save_regex_to_template", "save_under_clause", 
		"download_directive", "get_rule", "get_unknown_rule", "avoid_rule", "authentication_directive", 
		"simple_authentication_rule", "checkin_directive", "cookies_directive", 
		"matcher", "unknown_matcher_op", "matchers_product", "rest", "and_matcher", 
		"and_not_matcher", "matcher_factor", "not_matcher_op", "all_matcher", 
		"images_matcher", "same_domain_matcher", "subpaths_matcher", "resources_matcher", 
		"css_matcher", "urls_matcher", "max_jumps_matcher", "min_jumps_matcher"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'all'", "'as'", null, null, "'avoid'", null, null, "'css'", "'domain'", 
		"'each'", "'file'", "'flat'", "'from'", "'get'", null, "'images'", null, 
		null, null, null, "'maximum'", null, null, "'on'", "'outside'", null, 
		"'password'", "'post'", "'resources'", "'save'", null, "'subpaths'", "'under'", 
		"'unknown'", null, "'urls'", "'user'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ALL", "AS", "AS_BASE_NAME", "AS_TREE", "AVOID", "CHECK_IN_AT", 
		"COOKIES", "CSS", "DOMAIN", "EACH", "FILE", "FLAT", "FROM", "GET", "GET_UNKNOWN", 
		"IMAGES", "ITEMS_ON_DOMAIN", "JUMPS", "JUMPS_AND_MORE", "KB", "MAXIMUM", 
		"MB", "NO_SIZE_LIMIT", "ON", "OUTSIDE", "PARALLEL_DOWNLOADS", "PASSWORD", 
		"POST", "RESOURCES", "SAVE", "START_AT", "SUBPATHS", "UNDER", "UNKNOWN", 
		"UP_TO", "URLS", "USER", "EQUALS", "INTEGER_LITERAL", "STRING_LITERAL", 
		"COMMENT", "WS", "WORD"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HamsterConfigParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HamsterConfigParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode INTEGER_LITERAL() { return getToken(HamsterConfigParser.INTEGER_LITERAL, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitInteger(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_integer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			match(INTEGER_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public Naked_stringContext naked_string() {
			return getRuleContext(Naked_stringContext.class,0);
		}
		public File_content_stringContext file_content_string() {
			return getRuleContext(File_content_stringContext.class,0);
		}
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitString(this);
		}
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING_LITERAL:
				{
				setState(96);
				naked_string();
				}
				break;
			case FILE:
				{
				setState(97);
				file_content_string();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Naked_stringContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(HamsterConfigParser.STRING_LITERAL, 0); }
		public Naked_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_naked_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterNaked_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitNaked_string(this);
		}
	}

	public final Naked_stringContext naked_string() throws RecognitionException {
		Naked_stringContext _localctx = new Naked_stringContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_naked_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_content_stringContext extends ParserRuleContext {
		public TerminalNode FILE() { return getToken(HamsterConfigParser.FILE, 0); }
		public Naked_stringContext naked_string() {
			return getRuleContext(Naked_stringContext.class,0);
		}
		public File_content_stringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_content_string; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterFile_content_string(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitFile_content_string(this);
		}
	}

	public final File_content_stringContext file_content_string() throws RecognitionException {
		File_content_stringContext _localctx = new File_content_stringContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_file_content_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(FILE);
			setState(103);
			naked_string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_properties_mapContext extends ParserRuleContext {
		public List<String_propertyContext> string_property() {
			return getRuleContexts(String_propertyContext.class);
		}
		public String_propertyContext string_property(int i) {
			return getRuleContext(String_propertyContext.class,i);
		}
		public String_properties_mapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_properties_map; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterString_properties_map(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitString_properties_map(this);
		}
	}

	public final String_properties_mapContext string_properties_map() throws RecognitionException {
		String_properties_mapContext _localctx = new String_properties_mapContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_string_properties_map);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FILE || _la==STRING_LITERAL) {
				{
				{
				setState(105);
				string_property();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class String_propertyContext extends ParserRuleContext {
		public List<StringContext> string() {
			return getRuleContexts(StringContext.class);
		}
		public StringContext string(int i) {
			return getRuleContext(StringContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(HamsterConfigParser.EQUALS, 0); }
		public String_propertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string_property; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterString_property(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitString_property(this);
		}
	}

	public final String_propertyContext string_property() throws RecognitionException {
		String_propertyContext _localctx = new String_propertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_string_property);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			string();
			setState(112);
			match(EQUALS);
			setState(113);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConfigContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HamsterConfigParser.EOF, 0); }
		public List<DirectiveContext> directive() {
			return getRuleContexts(DirectiveContext.class);
		}
		public DirectiveContext directive(int i) {
			return getRuleContext(DirectiveContext.class,i);
		}
		public ConfigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_config; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterConfig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitConfig(this);
		}
	}

	public final ConfigContext config() throws RecognitionException {
		ConfigContext _localctx = new ConfigContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_config);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AVOID) | (1L << CHECK_IN_AT) | (1L << COOKIES) | (1L << GET) | (1L << GET_UNKNOWN) | (1L << MAXIMUM) | (1L << NO_SIZE_LIMIT) | (1L << SAVE) | (1L << START_AT) | (1L << USER) | (1L << INTEGER_LITERAL))) != 0)) {
				{
				{
				setState(115);
				directive();
				}
				}
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectiveContext extends ParserRuleContext {
		public Start_directiveContext start_directive() {
			return getRuleContext(Start_directiveContext.class,0);
		}
		public Parallel_directiveContext parallel_directive() {
			return getRuleContext(Parallel_directiveContext.class,0);
		}
		public Download_directiveContext download_directive() {
			return getRuleContext(Download_directiveContext.class,0);
		}
		public Save_directiveContext save_directive() {
			return getRuleContext(Save_directiveContext.class,0);
		}
		public Authentication_directiveContext authentication_directive() {
			return getRuleContext(Authentication_directiveContext.class,0);
		}
		public Max_size_directiveContext max_size_directive() {
			return getRuleContext(Max_size_directiveContext.class,0);
		}
		public Checkin_directiveContext checkin_directive() {
			return getRuleContext(Checkin_directiveContext.class,0);
		}
		public Cookies_directiveContext cookies_directive() {
			return getRuleContext(Cookies_directiveContext.class,0);
		}
		public DirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitDirective(this);
		}
	}

	public final DirectiveContext directive() throws RecognitionException {
		DirectiveContext _localctx = new DirectiveContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case START_AT:
				{
				setState(123);
				start_directive();
				}
				break;
			case INTEGER_LITERAL:
				{
				setState(124);
				parallel_directive();
				}
				break;
			case AVOID:
			case GET:
			case GET_UNKNOWN:
				{
				setState(125);
				download_directive();
				}
				break;
			case SAVE:
				{
				setState(126);
				save_directive();
				}
				break;
			case USER:
				{
				setState(127);
				authentication_directive();
				}
				break;
			case MAXIMUM:
			case NO_SIZE_LIMIT:
				{
				setState(128);
				max_size_directive();
				}
				break;
			case CHECK_IN_AT:
				{
				setState(129);
				checkin_directive();
				}
				break;
			case COOKIES:
				{
				setState(130);
				cookies_directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Start_directiveContext extends ParserRuleContext {
		public TerminalNode START_AT() { return getToken(HamsterConfigParser.START_AT, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public Start_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterStart_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitStart_directive(this);
		}
	}

	public final Start_directiveContext start_directive() throws RecognitionException {
		Start_directiveContext _localctx = new Start_directiveContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_start_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(START_AT);
			setState(134);
			string();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parallel_directiveContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode PARALLEL_DOWNLOADS() { return getToken(HamsterConfigParser.PARALLEL_DOWNLOADS, 0); }
		public Parallel_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parallel_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterParallel_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitParallel_directive(this);
		}
	}

	public final Parallel_directiveContext parallel_directive() throws RecognitionException {
		Parallel_directiveContext _localctx = new Parallel_directiveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_parallel_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			integer();
			setState(137);
			match(PARALLEL_DOWNLOADS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Max_size_directiveContext extends ParserRuleContext {
		public Max_size_per_file_directiveContext max_size_per_file_directive() {
			return getRuleContext(Max_size_per_file_directiveContext.class,0);
		}
		public No_max_size_directiveContext no_max_size_directive() {
			return getRuleContext(No_max_size_directiveContext.class,0);
		}
		public Max_size_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_max_size_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterMax_size_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitMax_size_directive(this);
		}
	}

	public final Max_size_directiveContext max_size_directive() throws RecognitionException {
		Max_size_directiveContext _localctx = new Max_size_directiveContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_max_size_directive);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAXIMUM:
				{
				setState(139);
				max_size_per_file_directive();
				}
				break;
			case NO_SIZE_LIMIT:
				{
				setState(140);
				no_max_size_directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class No_max_size_directiveContext extends ParserRuleContext {
		public TerminalNode NO_SIZE_LIMIT() { return getToken(HamsterConfigParser.NO_SIZE_LIMIT, 0); }
		public TerminalNode FROM() { return getToken(HamsterConfigParser.FROM, 0); }
		public MatcherContext matcher() {
			return getRuleContext(MatcherContext.class,0);
		}
		public No_max_size_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_no_max_size_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterNo_max_size_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitNo_max_size_directive(this);
		}
	}

	public final No_max_size_directiveContext no_max_size_directive() throws RecognitionException {
		No_max_size_directiveContext _localctx = new No_max_size_directiveContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_no_max_size_directive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(NO_SIZE_LIMIT);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(144);
				match(FROM);
				setState(145);
				matcher();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Max_size_per_file_directiveContext extends ParserRuleContext {
		public TerminalNode MAXIMUM() { return getToken(HamsterConfigParser.MAXIMUM, 0); }
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public Size_unitContext size_unit() {
			return getRuleContext(Size_unitContext.class,0);
		}
		public TerminalNode EACH() { return getToken(HamsterConfigParser.EACH, 0); }
		public TerminalNode FROM() { return getToken(HamsterConfigParser.FROM, 0); }
		public MatcherContext matcher() {
			return getRuleContext(MatcherContext.class,0);
		}
		public Max_size_per_file_directiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_max_size_per_file_directive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterMax_size_per_file_directive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitMax_size_per_file_directive(this);
		}
	}

	public final Max_size_per_file_directiveContext max_size_per_file_directive() throws RecognitionException {
		Max_size_per_file_directiveContext _localctx = new Max_size_per_file_directiveContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_max_size_per_file_directive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(MAXIMUM);
			setState(149);
			integer();
			setState(150);
			size_unit();
			setState(151);
			match(EACH);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(152);
				match(FROM);
				setState(153);
				matcher();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Size_unitContext extends ParserRuleContext {
		public KilobytesContext kilobytes() {
			return getRuleContext(KilobytesContext.class,0);
		}
		public MegabytesContext megabytes() {
			return getRuleContext(MegabytesContext.class,0);
		}
		public Size_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterSize_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitSize_unit(this);
		}
	}

	public final Size_unitContext size_unit() throws RecognitionException {
		Size_unitContext _localctx = new Size_unitContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_size_unit);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KB:
				enterOuterAlt(_localctx, 1);
				{
				setState(156);
				kilobytes();
				}
				break;
			case MB:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				megabytes();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KilobytesContext extends ParserRuleContext {
		public TerminalNode KB() { return getToken(HamsterConfigParser.KB, 0); }
		public KilobytesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kilobytes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).enterKilobytes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HamsterConfigParserListener ) ((HamsterConfigParserListener)listener).exitKilobytes(this);
		}
	}

	public final KilobytesContext kilobytes() throws RecognitionException {
		KilobytesContext _localctx = new KilobytesContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_kilobytes);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(KB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
